--- a/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
@@ -73,7 +73,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/unauthorizedThumbnail" />
+      app:layout_constraintTop_toBottomOf="@+id/changeProfileUnauthorized" />
 
     <ProgressBar
       android:id="@+id/progressBar"
@@ -85,6 +85,19 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+      android:id="@+id/changeProfileUnauthorized"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="8dp"
+      android:text="@string/change_profile_photo"
+      android:textColor="@color/ourTheme"
+      android:textSize="12sp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/unauthorizedThumbnail" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
